lib/ailia_llm.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Written for the FFI article
class ailiaLlmFFI {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ailiaLlmFFI(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ailiaLlmFFI.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// \~japanese
  /// @brief 利用可能な計算環境(CPU, GPU)の数を取得します
  /// @param env_count 計算環境情報の数の格納先
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the number of available computational environments (CPU, GPU).
  /// @param env_count The storage location of the number of computational environment information
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  int ailiaLLMGetBackendCount(
    ffi.Pointer<ffi.UnsignedInt> env_count,
  ) {
    return _ailiaLLMGetBackendCount(
      env_count,
    );
  }

  late final _ailiaLLMGetBackendCountPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.UnsignedInt>)>>(
      'ailiaLLMGetBackendCount');
  late final _ailiaLLMGetBackendCount = _ailiaLLMGetBackendCountPtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedInt>)>();

  /// \~japanese
  /// @brief 計算環境の一覧を取得します
  /// @param env 計算環境情報の格納先(AILIANetworkインスタンスを破棄するまで有効)
  /// @param env_idx 計算環境情報のインデックス(0～ ailiaLLMGetBackendCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the list of computational environments.
  /// @param env The storage location of the computational environment information (valid until the AILIANetwork instance
  /// is destroyed)
  /// @param env_idx The index of the computational environment information (0 to  ailiaLLMGetBackendCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  int ailiaLLMGetBackendName(
    ffi.Pointer<ffi.Pointer<ffi.Char>> env,
    int env_idx,
  ) {
    return _ailiaLLMGetBackendName(
      env,
      env_idx,
    );
  }

  late final _ailiaLLMGetBackendNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.UnsignedInt)>>('ailiaLLMGetBackendName');
  late final _ailiaLLMGetBackendName = _ailiaLLMGetBackendNamePtr
      .asFunction<int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  /// \~japanese
  /// @brief LLMオブジェクトを作成します。
  /// @param llm LLMオブジェクトポインタへのポインタ
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// LLMオブジェクトを作成します。
  ///
  /// \~english
  /// @brief Creates a LLM instance.
  /// @param llm A pointer to the LLM instance pointer
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Creates a LLM instance.
  int ailiaLLMCreate(
    ffi.Pointer<ffi.Pointer<AILIALLM>> llm,
  ) {
    return _ailiaLLMCreate(
      llm,
    );
  }

  late final _ailiaLLMCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Pointer<AILIALLM>>)>>('ailiaLLMCreate');
  late final _ailiaLLMCreate = _ailiaLLMCreatePtr
      .asFunction<int Function(ffi.Pointer<ffi.Pointer<AILIALLM>>)>();

  /// \~japanese
  /// @brief モデルファイルを読み込みます。
  /// @param llm LLMオブジェクトポインタへのポインタ
  /// @param path GGUFファイルのパス
  /// @param n_ctx コンテキスト長（0でモデルのデフォルト）
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// GGUFのモデルファイルを読み込みます。
  ///
  /// \~english
  /// @brief Open model file.
  /// @param llm A pointer to the LLM instance pointer
  /// @param path Path for GGUF
  /// @param n_ctx Context length for model (0 is model default）
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Open a model file for GGUF.
  int ailiaLLMOpenModelFileA(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<ffi.Char> path,
    int n_ctx,
  ) {
    return _ailiaLLMOpenModelFileA(
      llm,
      path,
      n_ctx,
    );
  }

  late final _ailiaLLMOpenModelFileAPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.Char>,
              ffi.UnsignedInt)>>('ailiaLLMOpenModelFileA');
  late final _ailiaLLMOpenModelFileA = _ailiaLLMOpenModelFileAPtr.asFunction<
      int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.Char>, int)>();

  int ailiaLLMOpenModelFileW(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<ffi.WChar> path,
    int n_ctx,
  ) {
    return _ailiaLLMOpenModelFileW(
      llm,
      path,
      n_ctx,
    );
  }

  late final _ailiaLLMOpenModelFileWPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.WChar>,
              ffi.UnsignedInt)>>('ailiaLLMOpenModelFileW');
  late final _ailiaLLMOpenModelFileW = _ailiaLLMOpenModelFileWPtr.asFunction<
      int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.WChar>, int)>();

  /// \~japanese
  /// @brief コンテキストの長さを取得します。
  /// @param llm   LLMオブジェクトポインタ
  /// @param len  コンテキストの長さ
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the size of context.
  /// @param llm   A LLM instance pointer
  /// @param len  The length of context
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  int ailiaLLMGetContextSize(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<ffi.UnsignedInt> context_size,
  ) {
    return _ailiaLLMGetContextSize(
      llm,
      context_size,
    );
  }

  late final _ailiaLLMGetContextSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>,
              ffi.Pointer<ffi.UnsignedInt>)>>('ailiaLLMGetContextSize');
  late final _ailiaLLMGetContextSize = _ailiaLLMGetContextSizePtr.asFunction<
      int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.UnsignedInt>)>();

  /// \~japanese
  /// @brief サンプリングのパラメータを設定します。
  /// @param llm LLMオブジェクトポインタへのポインタ
  /// @param top_k サンプリングする確率値の上位個数、デフォルト40
  /// @param top_p サンプリングする確率値の範囲、デフォルト0.9（0.9〜1.0）
  /// @param temp 温度パラメータ、デフォルト0.4
  /// @param dist シード、デフォルト1234
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// LLMのサンプリングの設定を行います。ailiaLLMSetPromptの前に実行する必要があります。
  ///
  /// \~english
  /// @brief Set the sampling parameter.
  /// @param llm A pointer to the LLM instance pointer
  /// @param top_k Sampling probability value's top number, default 40
  /// @param top_p Sampling probability value range, default 0.9 (0.9 to 1.0)
  /// @param temp Temperature parameter, default 0.4
  /// @param dist Seed, default 1234
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Set LLM sampling parameters. Must be run before ailiaLLMSetPrompt.
  int ailiaLLMSetSamplingParams(
    ffi.Pointer<AILIALLM> llm,
    int top_k,
    double top_p,
    double temp,
    int dist,
  ) {
    return _ailiaLLMSetSamplingParams(
      llm,
      top_k,
      top_p,
      temp,
      dist,
    );
  }

  late final _ailiaLLMSetSamplingParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>, ffi.UnsignedInt, ffi.Float,
              ffi.Float, ffi.UnsignedInt)>>('ailiaLLMSetSamplingParams');
  late final _ailiaLLMSetSamplingParams =
      _ailiaLLMSetSamplingParamsPtr.asFunction<
          int Function(ffi.Pointer<AILIALLM>, int, double, double, int)>();

  /// \~japanese
  /// @brief プロンプトを設定します。
  /// @param llm LLMオブジェクトポインタへのポインタ
  /// @param message メッセージの配列
  /// @param message_cnt メッセージの数
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// LLMに問い合わせるプロンプトを設定します。
  /// ChatHistoryもmessageに含めてください。
  ///
  /// \~english
  /// @brief Set the prompt.
  /// @param llm A pointer to the LLM instance pointer
  /// @param message Array of messages
  /// @param message_cnt Number of messages
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Set the prompt to query the LLM.
  /// Please include ChatHistory in the message as well.
  int ailiaLLMSetPrompt(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<AILIALLMChatMessage> message,
    int message_cnt,
  ) {
    return _ailiaLLMSetPrompt(
      llm,
      message,
      message_cnt,
    );
  }

  late final _ailiaLLMSetPromptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<AILIALLM>,
              ffi.Pointer<AILIALLMChatMessage>,
              ffi.UnsignedInt)>>('ailiaLLMSetPrompt');
  late final _ailiaLLMSetPrompt = _ailiaLLMSetPromptPtr.asFunction<
      int Function(
          ffi.Pointer<AILIALLM>, ffi.Pointer<AILIALLMChatMessage>, int)>();

  /// \~japanese
  /// @brief 生成を行います。
  /// @param llm LLMオブジェクトポインタ
  /// @param done 生成が完了したか
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// デコードした結果はailiaLLMGetDeltaText APIで取得します。
  /// ailiaLLMGenerateを呼び出すたびに1トークンずつデコードします。
  /// doneは0か1を取ります。doneが1の場合、生成完了となります。
  ///
  /// \~english
  /// @brief Perform generate
  /// @param llm A LLM instance pointer
  /// @param done Generation complete?
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// The decoded result is obtained through the ailiaLLMGetDeltaText API.
  /// Each call to ailiaLLMGenerate decodes one token at a time.
  /// The value of done is 0 or 1. If done is 1, the generation is complete.
  int ailiaLLMGenerate(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<ffi.UnsignedInt> done,
  ) {
    return _ailiaLLMGenerate(
      llm,
      done,
    );
  }

  late final _ailiaLLMGeneratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>,
              ffi.Pointer<ffi.UnsignedInt>)>>('ailiaLLMGenerate');
  late final _ailiaLLMGenerate = _ailiaLLMGeneratePtr.asFunction<
      int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.UnsignedInt>)>();

  /// \~japanese
  /// @brief テキストの長さを取得します。(NULL文字含む)
  /// @param llm       LLMオブジェクトポインタ
  /// @param buf_size  テキストの長さ
  /// @return
  /// 成功した場合は \ref AILIA_LLM_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  ///
  /// \~english
  /// @brief Gets the size of text. (Include null)
  /// @param llm       A LLM instance pointer
  /// @param buf_size  The length of text
  /// @return
  /// If this function is successful, it returns  \ref AILIA_LLM_STATUS_SUCCESS , or an error code otherwise.
  int ailiaLLMGetDeltaTextSize(
    ffi.Pointer<AILIALLM> llm,
    ffi.Pointer<ffi.UnsignedInt> buf_size,
  ) {
    return _ailiaLLMGetDeltaTextSize(
      llm,
      buf_size,
    );
  }

  late final _ailiaLLMGetDeltaTextSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AILIALLM>,
              ffi.Pointer<ffi.UnsignedInt>)>>('ailiaLLMGetDeltaTextSize');
  late final _ailiaLLMGetDeltaTextSize =
      _ailiaLLMGetDeltaTextSizePtr.asFunction<
          int Function(ffi.Pointer<AILIALLM>, ffi.Pointer<ffi.UnsignedInt>)>();
